Slightly cleaner version of the version code -> SH